# Bloker63

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.ps1  buildserver.bat
Baloker Online/: GrabImages.py  main.c
Baloker Online/assets/: OpenFont Licence.txt
Baloker Online/src/: NOTES.txt  baloker.c  baloker.h  main.c
Baloker Online/src/modules/: UI.c  UI.h  cards.c  cards.h  game.c  game.h  poker.c  poker.h  window.c  window.h
Baloker Server/: libsodium.lib
Baloker Server/src/: main.c
Bloker63/: Cards.py  Jokers.json  Jokers.py  Poker.py  UI.py  Window.py  __init__.py  __main__.py
Bloker63/Assets/: Title.paint
